# SPDX-FileCopyrightText: Thomas Herzog
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "reqenv"
version = "0.1.0"
authors = ["Thomas Herzog"]
edition = "2018"
license = "OSL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.0.0"
num_cpus = "1.0"
contracts = "0.3.0"
